# ZLR-to-CSV-converter

./: .gitignore  Makefile  README.md  decode.py  decode_v2.py  pyproject.toml  setup.py
example/: log_2023-2-09T21-38-47.csv  log_2023-2-09T21-38-47.zlr
